--- a/style.css
+++ b/style.css
@@ -1,39 +1,39 @@
-#graph-container {
-  position: relative;
-  width: 400px;
+#chart {
+  width: auto;
   height: 400px;
-  border: 1px solid black;
-  margin: 50px auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-canvas {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-#button-container {
-  position: absolute;
-  bottom: 0;
-  left: 0;
+.buttons {
   width: 100%;
-  text-align: center;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 button {
+  align-items: center;
+  justify-content: center;
+  display: inline-flex;
   padding: 10px 20px;
   margin: 10px;
-  font-size: 20px;
-  color: white;
+  font-size: auto;
   border: none;
   border-radius: 5px;
   cursor: pointer;
 }
 
-#good-button {
-  background-color: green;
+#btn-good {
+  color: #fff;
+  background-color: #4caf50;
 }
 
-#bad-button {
-  background-color: red;
+#btn-bad {
+  color: #fff;
+  background-color: #f44336;
 }
